Add functionality for listing and adding categories

--- a/.pylintrc
+++ b/.pylintrc
@@ -3,4 +3,5 @@
 disable=missing-module-docstring,
         missing-function-docstring,
         import-error,
-        cyclic-import
+        cyclic-import,
+        line-too-long
